# manticoresearch

./: .cursorignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .hgignore  .noindex  .patterns  .project  116.conf  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  CPackOptions.cmake.in  INSTALL  ISSUE_TEMPLATE.md  Makefile  Makefile.am  Makefile.in  NOTICE  PULL_REQUEST_TEMPLATE.md  README  README-CJK-SEG-zh.md  README-CJK-SEG.md  README-zh.md  README.md  SPHINX_LICENSE  TESTING.md  acinclude.m4  bootstarp  bootstrap  buildconf.sh  columnar_src.txt  configure  configure.ac  core  coverage.sh  crash.txt  deps.txt  (+52 more)
api/libsphinxclient/: CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README  build.mk  buildconf.sh  configure  configure.in  libsphinxclient.vcproj  smoke.cmake  smoke_data.csv  smoke_ref.txt  smoke_test.conf  smoke_test.sh  sphinxclient.c  sphinxclient.h  sphinxclient_config.h.in  test.c  test.sln  test.vcproj  test03.sln  test03.vcproj
doc/: Makefile  Makefile.am  Makefile.in  binary-logging.md  check.pl  html2txt.pl  indexer.1  indextool.1  internal-binary-protocol.md  internal-options.md  internals-coding-standard.txt  internals-format-versions.txt  internals-index-format.md  internals-index-format.txt  manpages.xml  md2man.bash  mk.cmd  mk.sh  mysql-prepared-statements-plan.md  prepared-statements.md  search.1  searchd.1  spelldump.1  sphinx.css  sphinx.html  sphinx.txt  sphinx.xml  sphinx.xsl  tdigest_stateful_attr.md  uuid-primary-ids-spec.md  versions.md  wordbreaker.1
libfastpfor/: CMakeLists.txt
libicu/: CMakeLists.txt
libre2/: CMakeLists.txt  libre2.patch  libre2.sln  libre2.vcproj  libre2_12.sln  libre2_12.vcxproj  libre2_13.sln  libre2_13.vcxproj  libre2_15.sln  libre2_15.vcxproj
libstemmer_c/: CMakeLists.txt  Makefile.am  Makefile.in  README  libstemmer_c.sln  libstemmer_c.vcproj  libstemmer_c_12.sln  libstemmer_c_12.vcxproj  libstemmer_c_13.sln  libstemmer_c_13.vcxproj  mkinc.mak
mysqlse/: CMakeLists.txt  HOWTO.txt  INSTALL  Makefile.am  ha_sphinx.cc  ha_sphinx.h  plug.in  snippets_udf.cc  sphinx.5.0.37.diff  sphinx.5.0.91.diff
src/: .clang-format  .gitattributes  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  accumulator.cpp  accumulator.h  aggregate.cpp  aggregate.h  aggrexpr.cpp  aggrexpr.h  attr_embedding.cpp  attr_embedding.h  attribute.cpp  attribute.h  attrindex_builder.cpp  attrindex_builder.h  attrindex_merge.cpp  attrindex_merge.h  binlog.cpp  binlog.h  binlog_defs.h  cedarpp.h  chunksearchctx.cpp  chunksearchctx.h  cjkpreprocessor.cpp  cjkpreprocessor.h  client_session.h  client_task_info.cpp  client_task_info.h  collation.cpp  collation.h  columnarexpr.cpp  columnarexpr.h  columnarfilter.cpp  columnarfilter.h  columnargrouper.cpp  columnargrouper.h  columnarlib.cpp  (+387 more)
src/auth/: auth.cpp  auth.h  auth_bootstrap.cpp  auth_bootstrap.h  auth_common.cpp  auth_common.h  auth_log.cpp  auth_log.h  auth_perms.cpp  auth_perms.h  auth_proto_api.cpp  auth_proto_api.h  auth_proto_http.cpp  auth_proto_http.h  auth_proto_mysql.cpp  auth_proto_mysql.h  gcm_nonce.cpp  gcm_nonce.h  spec.md  spec_api.md
src/charsets/: chinese.txt  cjk.txt  cont.txt  english.txt  globalaliases.h.in  japanese.txt  korean.txt  non_cjk.txt  noncjk.txt  russian.txt  thai.txt
src/daemon/: CMakeLists.txt  api_commands.h  api_search.cpp  api_search.h  crash_logger.cpp  crash_logger.h  daemon_ipc.cpp  daemon_ipc.h  daemon_log.cpp  failures_log.cpp  failures_log.h  http_log.cpp  logger.h  match_iterator.cpp  match_iterator.h  minimize_aggr_result.cpp  minimize_aggr_result.h  notifier.cpp  notifier.h  query_log.cpp  search_handler.cpp  search_handler.h  system_tables.cpp  winservice.cpp  winservice.h
src/detail/: coroutine_impl.h  expmeter.h  indexlink.cpp  indexlink.h
src/dict/: CMakeLists.txt  aggregate_hit.h  bin.cpp  bin.h  crc_engine.h  crc_engine_impl.h  dict_base.cpp  dict_base.h  dict_crc.cpp  dict_crc.h  dict_crc_impl.h  dict_entry.h  dict_exact.cpp  dict_keywords.cpp  dict_proxy.h  dict_star.cpp  dict_star8.cpp  template_dict_traits.cpp  template_dict_traits.h  word_forms.cpp  word_forms.h
src/embeddings/: CMakeLists.txt  embeddings.cpp  embeddings.h
src/farmhash/: farmhash.h
src/fuzzer/: CMakeLists.txt  dict.txt  fuzzer.cpp
src/gbenches/: CMakeLists.txt  appendf.cpp  expressions.cpp  functions.cpp  geodist.cpp  json.cpp  locators.cpp  misc.cpp  popcount.cpp  stripper.cpp  text.cpp  tokenizer.cpp
src/gtests/: CMakeLists.txt  cJSON_test.c  gtests_docidlookup.cpp  gtests_filter.cpp  gtests_functions.cpp  gtests_globalstate.cpp  gtests_hugetokenizer.cpp  gtests_json.cpp  gtests_pqstuff.cpp  gtests_rtstuff.cpp  gtests_searchd.cpp  gtests_searchdaemon.cpp  gtests_ssl.cpp  gtests_strfmt.cpp  gtests_stringbuilder.cpp  gtests_text.cpp  gtests_threadstuff.cpp  gtests_tokenizer.cpp  gtests_uklemmatizer.cpp  gtests_wsrep.cpp  libsphinxtest.txt  libsphinxtest2.txt
src/http/: http_parser.c  http_parser.h  log_management.h
src/indexing_sources/: CMakeLists.txt  common_stuff.cpp  common_stuff.h  schema_configurator.h  source_document.cpp  source_document.h  source_mysql.cpp  source_mysql.h  source_odbc.cpp  source_odbc.h  source_pgsql.cpp  source_pgsql.h  source_sql.cpp  source_sql.h  source_stats.h  source_svpipe.cpp  source_svpipe.h  source_xmlpipe2.cpp  source_xmlpipe2.h
src/json/: cJSON.c  cJSON.h  cJSON_test.c
src/lz4/: lz4hc.c
src/perfetto/: CMakeLists.txt  README.txt
src/replication/: CMakeLists.txt  api_command_cluster.cpp  api_command_cluster.h  cluster_binlog.cpp  cluster_binlog.h  cluster_commands.h  cluster_delete.cpp  cluster_delete.h  cluster_file_reserve.cpp  cluster_file_reserve.h  (+51 more)
test/: .gitattributes  CMakeLists.txt  Makefile  bench.php  clean.cmd  clean.sh  clean_old.sh  helpers.inc  helpers.php  helpers_rt.inc  html_120.txt  mre.rec  mysql_prepared_stmt.md  mysql_prepared_stmt.php  settings.inc  stopwords.txt  synonyms.txt  test-templates.xml  test_columnar.conf  test_icu.conf  test_jieba.conf  test_odbc.conf  test_re.conf  test_rlp.conf  ubertest.php  ubertest.php.in  valgrind.supp  wordforms.txt
(+4028 files in other folders)
